ci, only add cobertura plugin